DOCS - Updating Apache settings

--- a/docs/httpd-vhosts.conf
+++ b/docs/httpd-vhosts.conf
@@ -25,10 +25,11 @@ NameVirtualHost *:80
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
 
-<VirtualHost *:80>
+VirtualHost *:80>
     ServerAdmin marcus@iseusa.com
     #DocumentRoot "C:/Program Files/Apache Software Foundation/Apache2.2/htdocs"
-    DocumentRoot "C:/Websites/www/smg"
+    #DocumentRoot "C:/Websites/www/student-management"
+    DocumentRoot "C:/Websites/www/phpusa"
     ServerName development
     ServerAlias development
     ErrorLog "logs/development.log"
@@ -63,7 +64,7 @@ NameVirtualHost *:80
 
 
 <VirtualHost *:80>    
-    DocumentRoot "C:\Websites\www\smg\extra"
+    DocumentRoot "C:\Websites\www\extra"
     ServerName extra.local
 </VirtualHost>
 
@@ -81,15 +82,21 @@ NameVirtualHost *:80
 </VirtualHost>
 
 
+<VirtualHost *:80>
+    DocumentRoot "C:\Websites\www\phpusa"
+    ServerName php.local
+</VirtualHost>
+
+
 <VirtualHost *:80>    
-    DocumentRoot "C:\Websites\www\smg"
+    DocumentRoot "C:\Websites\www\student-management"
     ServerName smg.local
     ErrorLog "logs/smg.log"    	
 </VirtualHost>
 
 
-<VirtualHost *:80>
-    DocumentRoot "C:\Websites\www\phpusa"
-    ServerName php.local
+<VirtualHost *:80>    
+    DocumentRoot "C:\Websites\www\exitsApplication\trips"
+    ServerName trips.local   	
 </VirtualHost>
 
