--- a/docs/httpd.conf
+++ b/docs/httpd.conf
@@ -198,10 +198,10 @@ DocumentRoot "C:/Program Files/Apache Software Foundation/Apache2.2/htdocs"
   Allow from all
 </Directory>
 
-<Directory "C:\Websites">
-  Order Deny,Allow
-  Allow from all
-</Directory>
+#<Directory "C:\Websites">
+#  Order Deny,Allow
+#  Allow from all
+#</Directory>
 
 #
 # Note that from this point forward you must specifically allow
@@ -214,34 +214,39 @@ DocumentRoot "C:/Program Files/Apache Software Foundation/Apache2.2/htdocs"
 # This should be changed to whatever you set DocumentRoot to.
 #
 <Directory "C:\Websites">
-    #<Directory "C:/Program Files/Apache Software Foundation/Apache2.2/htdocs">
-    #
-    # Possible values for the Options directive are "None", "All",
-    # or any combination of:
-    #   Indexes Includes FollowSymLinks SymLinksifOwnerMatch ExecCGI MultiViews
-    #
-    # Note that "MultiViews" must be named *explicitly* --- "Options All"
-    # doesn't give it to you.
-    #
-    # The Options directive is both complicated and important.  Please see
-    # http://httpd.apache.org/docs/2.2/mod/core.html#options
-    # for more information.
-    #
-    Options Indexes FollowSymLinks
+    #Options Indexes FollowSymLinks
+    Options Indexes Includes MultiViews FollowSymLinks
 
-    #
     # AllowOverride controls what directives may be placed in .htaccess files.
     # It can be "All", "None", or any combination of the keywords:
     #   Options FileInfo AuthConfig Limit
     #
     AllowOverride None
 
-    #
     # Controls who can get stuff from this server.
     #
     Order allow,deny
     Allow from all
+</Directory>
 
+
+<Directory "C:\myProjects\fbcBabylon">
+   Options Indexes Includes MultiViews FollowSymLinks
+
+   AllowOverride None
+	
+   Order allow,deny
+   Allow from all
+</Directory>
+
+
+<Directory "C:\MyProjects\pupilometer">
+   Options Indexes Includes MultiViews FollowSymLinks
+
+   AllowOverride None
+	
+   Order allow,deny
+   Allow from all
 </Directory>
 
 #
@@ -320,6 +325,8 @@ LogLevel warn
     # access content that does not live under the DocumentRoot.
     # Example:
     # Alias /webpath /full/filesystem/path
+      Alias /CFIDE "C:\Program Files\Apache Software Foundation\Apache2.2\htdocs\CFIDE"
+
     #
     # If you include a trailing / on /webpath then the server will
     # require it to be present in the URL.  You will also likely
