DOCS - Updating Apache settings

--- a/docs/httpd-vhosts.conf
+++ b/docs/httpd-vhosts.conf
@@ -25,7 +25,7 @@ NameVirtualHost *:80
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
 
-VirtualHost *:80>
+<VirtualHost *:80>
     ServerAdmin marcus@iseusa.com
     #DocumentRoot "C:/Program Files/Apache Software Foundation/Apache2.2/htdocs"
     #DocumentRoot "C:/Websites/www/student-management"
